# Franka_Teleop

./: CHANGELOG.rst  Dockerfile  Jenkinsfile  README.md  Readme.md  franka.repos  franka_entrypoint.sh  ros2_ws.code-workspace  start_RaptorAPIWrapper.sh  start_TestAdmittance.sh  start_TestCalibration.sh  start_TestImpedance.sh
.github/workflows/: ci.yml
franka_bringup/config/: controllers.yaml  custom_franka.config.yaml
franka_bringup/launch/: example.launch.py  franka.launch.py  teleop_robot.launch.py
franka_example_controllers/: CMakeLists.txt  franka_example_controllers.xml
franka_example_controllers/include/franka_example_controllers/: cartesian_pose_example_controller.hpp  cartesian_velocity_example_controller.hpp  gripper_example_controller.hpp  gripper_example_controller_simu.hpp  joint_position_example_controller.hpp  joint_velocity_example_controller.hpp
franka_example_controllers/src/: cartesian_pose_example_controller.cpp  cartesian_velocity_example_controller.cpp  gripper_example_controller.cpp  gripper_example_controller_simu.cpp  joint_position_example_controller.cpp  joint_velocity_example_controller.cpp
franka_gazebo/franka_gazebo_bringup/: package.xml
franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
franka_gazebo/franka_gazebo_bringup/launch/: gazebo_joint_velocity_controller_example.launch.py  gazebo_joint_velocity_position.launch.py
franka_gazebo/ros_gz_example_gazebo/: CMakeLists.txt
franka_gazebo/ros_gz_example_gazebo/include/ros_gz_example_gazebo/: FullSystem.hh
franka_gazebo/ros_gz_example_gazebo/src/: BasicSystem.cc  FullSystem.cc
franka_gazebo/ros_gz_example_gazebo/worlds/: franka avec cellule.sdf  franka.sdf
franka_hardware/include/franka_hardware/: franka_hardware_interface.hpp  ros_libfranka_logger.hpp
franka_hardware/src/: franka_hardware_interface.cpp  robot.cpp  ros_libfranka_logger.cpp
franka_hardware/test/: franka_hardware_cartesian_command_interface_test.cpp  franka_hardware_interface_test.cpp  franka_robot_test.cpp  test_utils.hpp
franka_robot_state_broadcaster/test/: test_franka_robot_state_broadcaster.cpp
franka_teleop/: package.xml  setup.py
franka_teleop/franka_teleop/: camera_launcher.py  distance_objet.py  distance_parois.py  fiole_pose_monitor.py  force_joystick.py  force_position.py  force_vitesse.py  franka_ig_solver.py  franka_ik_solver.py  graphe_position_robot_controleur.py  graphe_vitesse_robot_controleur.py  guide_virtuel.py  mgd.py  switch_mode.py  switch_mode_simu.py
test_admittance/: parameters.yaml
test_calibration/: parameters.yaml
test_calibration/src/: test_calibration.cpp
test_cartesien/: CMakeLists.txt  package.xml
test_cartesien/launch/: launch_controleur.py  launch_controleur_simu.py
test_cartesien/src/: TestPoseCartesian.cpp  offset_position.cpp  offset_position_simu.cpp  value_to_speed.cpp
test_impedance/: parameters.yaml
test_impedance/src/: test_impedance.cpp
