<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_teleop</name>
  <version>0.0.0</version>
  <description>Téléopération d'un robot Franka Fr3 en utilisant Pinocchio pour la cinématique inverse</description>
  <maintainer email="vincent@todo.todo">vincent</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>franka_description</depend>
  <depend>pinocchio</depend>
  <depend>numpy</depend>
  <depend>xacro</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>